# ai-image-enhancer

node-backend/: .gitignore  index.ts  package.json
node-backend/routes/: backgroundremover.ts  router.ts
poetry-demo/: .gitignore  pyproject.toml
poetry-demo/src/: main.py
poetry-demo/src/router/: enhance.py
poetry-demo/src/services/: cloudinery_upload.py
